# metalog

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
include/: metalog.hpp  munify.hpp
include/metalog/: atom.hpp  clause.hpp  config.hpp  conjunction.hpp  equivalent.hpp  join.hpp  minimize.hpp  resolve.hpp  solutions.hpp  substitute.hpp  term.hpp  types.hpp  unifiers.hpp  unify.hpp  var.hpp
include/metalog/config/workaround/: boost11001.hpp  boost7769.hpp  mpl.hpp
include/metalog/detail/: collections.hpp  empty.hpp  lazy.hpp  preprocessor.hpp  sequences.hpp
include/metalog/detail/collections/: algorithms.hpp  impl.hpp
include/metalog/detail/collections/concepts/: associative.hpp  extensible.hpp  forward.hpp
include/metalog/detail/preprocessor/: args.hpp  variadic_args.hpp
include/metalog/detail/sequences/: algorithms.hpp  associative_concept.hpp  extenders.hpp  extensible_associative_concept.hpp  extensible_concept.hpp  forward_call.hpp  forward_concept.hpp  impl.hpp
include/metalog/join/: conjunction.hpp  sequences.hpp  solutions.hpp  variadic.hpp
include/metalog/preprocessor/: args.hpp  variadic_args.hpp
include/metalog/resolve/: contingency.hpp  contradiction.hpp  tautology.hpp  variadic.hpp
include/metalog/types/: clause.hpp  conjunction.hpp  resolve.hpp  unify.hpp  var.hpp
include/metalog/unifiers/: associative.hpp  extensible.hpp  polymorphic.hpp  variadic.hpp
include/metalog/unify/: atoms.hpp  lazy.hpp  modifiers.hpp  terms.hpp  variables.hpp  variadic.hpp
include/munify/: atom.hpp  equiv_transform.hpp  modifiers_unwrapping.hpp  occurs.hpp  substitute.hpp  types.hpp  unifiable.hpp  unify.hpp  unwrap_sequence.hpp  vars_binding.hpp
include/munify/detail/: empty.hpp  preprocessor.hpp
include/munify/unify/: atoms.hpp  equiv_transform.hpp  modifiers.hpp  relations.hpp  terms.hpp  variables.hpp  vars_binding.hpp
test/: CMakeLists.txt  resolve.cpp  unify.cpp
